Recuperacion de contraseña y 2f2

--- a/Ludex/src/public/html/login.html
+++ b/Ludex/src/public/html/login.html
@@ -75,11 +75,11 @@
             <span>Remember me</span>
           </label>
 
-          <a href="#" class="link-lite" id="forgotLink">Forgot password?</a>
+          <a href="./recovery.html" class="link-lite" id="forgotLink">Forgot password?</a>
         </div>
 
         <div class="actions">
-          <button type="submit" class="btn primary" id="signInBtn">Sign In</button>
+          <button type="submit" class="btn primary" id="signInBtn"><a href="./verification.html">Sign In</a></button>
         </div>
 
         <!-- social row bottom (mobile fallback) -->
