carrito de compras y pagos

--- a/Ludex/src/public/html/browse.html
+++ b/Ludex/src/public/html/browse.html
@@ -26,8 +26,10 @@
     </div>
 
     <div class="topbar-right">
-      <button class="icon-btn" aria-label="Carrito" title="Carrito">
-        <svg width="20" height="20" viewBox="0 0 24 24"><path d="M6 6h15l-1.5 9h-11z" fill="none" stroke="#111" stroke-width="1.2"/></svg>
+      <button id="cartBtn" class="icon-btn" aria-label="Carrito" title="Carrito">
+        <svg width="20" height="20" viewBox="0 0 24 24">
+          <path d="M6 6h15l-1.5 9h-11z" fill="none" stroke="#111" stroke-width="1.2"/>
+        </svg>
       </button>
       <button class="icon-btn" aria-label="Perfil" title="Perfil">
         <svg width="20" height="20" viewBox="0 0 24 24"><circle cx="12" cy="8" r="3"/><path d="M4 20c0-3.3 4.8-6 8-6s8 2.7 8 6" fill="none" stroke="#111" stroke-width="1.2"/></svg>
