Detalle del producto

--- a/Ludex/src/public/html/browse.html
+++ b/Ludex/src/public/html/browse.html
@@ -122,22 +122,22 @@
         <!-- Sample cards... -->
         <article class="card" data-category="RPG" data-price="2" data-title="Juego de rol">
           <div class="card-media"><img src="images/game1.jpg" alt="Juego de rol"><span class="badge sale">-30%</span><button class="fav">★</button></div>
-          <div class="card-body"><h3 class="card-title">Juego de rol</h3><p class="card-sub">$3 <span class="muted"> $2 / por</span></p><button class="btn small primary">Añadir al carrito</button></div>
+          <div class="card-body"><h3 class="card-title"><a href="./product.html">Juego de rol</a></h3><p class="card-sub">$3 <span class="muted"> $2 / por</span></p><button class="btn small primary">Añadir al carrito</button></div>
         </article>
 
         <article class="card" data-category="Action" data-price="1" data-title="Juego de Guerra">
           <div class="card-media"><img src="images/game2.jpg" alt="Juego de guerra"><span class="badge sale">-30%</span><button class="fav">★</button></div>
-          <div class="card-body"><h3 class="card-title">Juego de Guerra</h3><p class="card-sub">$1 <span class="muted"> $1 / por</span></p><button class="btn small primary">Añadir al carrito</button></div>
+          <div class="card-body"><h3 class="card-title"><a href="./product.html">Juego de Guerra</a></h3><p class="card-sub">$1 <span class="muted"> $1 / por</span></p><button class="btn small primary">Añadir al carrito</button></div>
         </article>
 
         <article class="card" data-category="Board" data-price="2" data-title="Juego de mesa">
           <div class="card-media"><img src="images/game3.jpg" alt="Juego de mesa"><button class="fav">★</button></div>
-          <div class="card-body"><h3 class="card-title">Juego de mesa</h3><p class="card-sub">$2 <span class="muted"> / por</span></p><button class="btn small primary">Añadir al carrito</button></div>
+          <div class="card-body"><h3 class="card-title"><a href="./product.html">Juego de mesa</a></h3><p class="card-sub">$2 <span class="muted"> / por</span></p><button class="btn small primary">Añadir al carrito</button></div>
         </article>
 
         <article class="card" data-category="Card" data-price="5" data-title="Juego de cartas">
           <div class="card-media"><img src="images/game4.jpg" alt="Juego de cartas"><button class="fav">★</button></div>
-          <div class="card-body"><h3 class="card-title">Juego de cartas</h3><p class="card-sub">$5 <span class="muted"> / por</span></p><button class="btn small primary">Añadir al carrito</button></div>
+          <div class="card-body"><h3 class="card-title"><a href="./product.html">Juego de cartas</a></h3><p class="card-sub">$5 <span class="muted"> / por</span></p><button class="btn small primary">Añadir al carrito</button></div>
         </article>
       </div>
 
