--- a/Ludex/src/public/html/pago.html
+++ b/Ludex/src/public/html/pago.html
@@ -92,7 +92,7 @@
     <a href="./browse.html" class="nav-item"><i class="fa-solid fa-house"></i><span>Inicio</span></a>
     <a href="#" class="nav-item"><i class="fa-solid fa-bell"></i><span>Alertas</span></a>
     <a href="#" class="nav-item"><i class="fa-solid fa-star"></i><span>Favoritos</span></a>
-    <a href="./carrito.html" class="nav-item"><i class="fa-solid fa-cart-shopping"></i><span>Carrito</span></a>
+    <a href="./library.html" class="nav-item"><i class="fa-solid fa-cart-shopping"></i><span>Biblioteca</span></a>
   </nav>
 </body>
 </html>
