--- a/Ludex/src/public/html/library.html
+++ b/Ludex/src/public/html/library.html
@@ -4,30 +4,41 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Librería — Ludex</title>
+
+  <!-- Fuente -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome (iconos) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="../css/views.css">
 </head>
 <body>
-  <aside class="sidebar-desktop" aria-hidden="true">
-    <nav class="side-nav-compact">
-      <button class="side-item"><span>Inicio</span></button>
-      <button class="side-item"><span>Notificaciones</span></button>
-      <button class="side-item"><span>Juegos deseados</span></button>
-      <button class="side-item active"><span>Librería</span></button>
-    </nav>
-  </aside>
-
   <header class="page-header">
-    <div class="header-left">
-      <button class="icon-btn" aria-label="Volver">←</button>
-      <h1>Ludex</h1>
+    <div class="page-left">
+      <!-- pequeño círculo/brand como en la imagen -->
+      <svg class="brand-mark" width="14" height="14" viewBox="0 0 24 24" aria-hidden>
+        <circle cx="12" cy="12" r="10" fill="#3366ff"/>
+      </svg>
+
+      <!-- título de la sección (cámbialo por cada página) -->
+      <span class="page-title">Libreria</span>
     </div>
-    <div class="header-right">
-      <button class="icon-btn" aria-label="Opciones">⋯</button>
+
+    <!-- icons a la derecha (carrito + perfil) -->
+    <div class="topbar-right">
+      <button id="cartBtn" class="icon-btn" aria-label="Carrito" title="Carrito">
+        <a href="./carrito.html"><i class="fa-solid fa-cart-shopping" aria-hidden></i></a>
+      </button>
+      <button class="icon-btn" aria-label="Perfil" title="Perfil">
+        <a href="./"><i class="fa-regular fa-user" aria-hidden></i></a>
+      </button>
     </div>
   </header>
 
-  <main class="container">
+  <!-- Main content (centrado, sin sidebar) -->
+  <main class="container" id="mainContent">
     <section class="library-list">
       <article class="lib-card">
         <img class="lib-thumb" src="images/illus1.jpg" alt="Cyber City">
@@ -73,11 +84,30 @@
     </section>
   </main>
 
+  <!-- bottom nav (misma estructura que en browse / notificaciones / wishlist) -->
   <nav class="bottom-nav" aria-label="Navegación principal">
-    <button class="nav-btn">🏠</button>
-    <button class="nav-btn">🔔</button>
-    <button class="nav-btn">⭐</button>
-    <button class="nav-btn active">📚</button>
+    <a href="./browse.html" class="nav-item" data-section="home" title="Inicio" aria-label="Inicio">
+      <i class="fa-solid fa-house" aria-hidden></i>
+      <span>Inicio</span>
+    </a>
+
+    <a href="./notifications.html" class="nav-item" data-section="notifications" title="Notificaciones" aria-label="Notificaciones">
+      <i class="fa-solid fa-bell" aria-hidden></i>
+      <span>Alertas</span>
+    </a>
+
+    <a href="./wishlist.html" class="nav-item" data-section="wishlist" title="Favoritos" aria-label="Favoritos">
+      <i class="fa-solid fa-star" aria-hidden></i>
+      <span>Favoritos</span>
+    </a>
+
+    <a href="./library.html" class="nav-item active" data-section="library" title="Biblioteca" aria-label="Biblioteca">
+      <i class="fa-solid fa-book" aria-hidden></i>
+      <span>Biblioteca</span>
+    </a>
   </nav>
+
+  <!-- opcional: sincroniza estado visual con browse.js si lo estás usando -->
+  <script src="../js/browse.js" defer></script>
 </body>
 </html>
