--- a/Ludex/src/public/html/index.html
+++ b/Ludex/src/public/html/index.html
@@ -54,7 +54,7 @@
 
         <!-- On mobile this area becomes sticky bottom CTA; on desktop it stays in the card above -->
         <div class="bottom-cta" aria-hidden>
-          <button class="btn full access" id="accessBtn-mobile">Continuar sin cuenta</button>
+          <button class="btn full access" id="accessBtn-mobile"><a href="browse.html">Continuar sin cuenta</a></button>
         </div>
       </section>
     </div> <!-- .container-desktop -->
