--- a/Ludex/src/public/html/library.html
+++ b/Ludex/src/public/html/library.html
@@ -32,7 +32,7 @@
         <a href="./carrito.html"><i class="fa-solid fa-cart-shopping" aria-hidden></i></a>
       </button>
       <button class="icon-btn" aria-label="Perfil" title="Perfil">
-        <a href="./"><i class="fa-regular fa-user" aria-hidden></i></a>
+        <a href="./Profile.html"><i class="fa-regular fa-user" aria-hidden></i></a>
       </button>
     </div>
   </header>
