Actualizaciones al desarrollador

--- a/Ludex/src/public/html/Profile.html
+++ b/Ludex/src/public/html/Profile.html
@@ -46,7 +46,7 @@
     <!-- Opciones -->
     <nav class="profile-nav">
       <ul>
-        <li><a href="#" class="profile-item">Mis Compras <span class="arrow">›</span></a></li>
+        <li><a href="./mis-compras.html" class="profile-item">Mis Compras <span class="arrow">›</span></a></li>
         <li><a href="#" class="profile-item">Información de Pago <span class="arrow">›</span></a></li>
         <li><a href="#" class="profile-item">Configuraciones <span class="arrow">›</span></a></li>
         <li><a href="./developer.html" class="profile-item">Actualizar a desarrollador <span class="arrow">›</span></a></li>
