Configuracion de perfil, acceso de carrito-perfil y comentarios

--- a/Ludex/src/public/html/carrito.html
+++ b/Ludex/src/public/html/carrito.html
@@ -13,6 +13,7 @@
   <header class="topbar">
     <a href="browse.html" class="back-btn"><i class="fas fa-arrow-left"></i></a>
     <h1><i class="fas fa-shopping-cart"></i> Carrito de compras</h1>
+    <a href="./Profile.html"><i class="fa-regular fa-user" aria-hidden></i></a>
   </header>
 
   <main class="cart-container">
