--- a/Ludex/src/public/html/index.html
+++ b/Ludex/src/public/html/index.html
@@ -19,7 +19,7 @@
         <img src="../images/undraw_video-game-night_fxcu.svg" alt="Ilustración Ludex" class="hero-illustration">
       </section>
 
-      <!-- SECTION 2: Welcome / Auth (panel derecho en desktop) -->
+      <!-- SECTION 2 -->
       <section class="welcome" aria-label="Inicio / Registro">
         <div class="welcome-card">
           <h2>Bienvenido a <span class="brand-inline">Ludex</span></h2>
@@ -52,12 +52,11 @@
           </div>
         </div>
 
-        <!-- On mobile this area becomes sticky bottom CTA; on desktop it stays in the card above -->
         <div class="bottom-cta" aria-hidden>
           <button class="btn full access" id="accessBtn-mobile"><a href="browse.html">Continuar sin cuenta</a></button>
         </div>
       </section>
-    </div> <!-- .container-desktop -->
+    </div> 
   </div>
 
   <script src="../js/bienvenida.js"></script>
