--- a/Ludex/src/public/html/library.html
+++ b/Ludex/src/public/html/library.html
@@ -22,7 +22,7 @@
         <circle cx="12" cy="12" r="10" fill="#3366ff"/>
       </svg>
 
-      <!-- título de la sección (cámbialo por cada página) -->
+      <!-- título de la sección -->
       <span class="page-title">Libreria</span>
     </div>
 
@@ -37,7 +37,7 @@
     </div>
   </header>
 
-  <!-- Main content (centrado, sin sidebar) -->
+  <!-- Main content-->
   <main class="container" id="mainContent">
     <section class="library-list">
       <article class="lib-card">
@@ -84,7 +84,7 @@
     </section>
   </main>
 
-  <!-- bottom nav (misma estructura que en browse / notificaciones / wishlist) -->
+  <!-- bottom nav -->
   <nav class="bottom-nav" aria-label="Navegación principal">
     <a href="./browse.html" class="nav-item" data-section="home" title="Inicio" aria-label="Inicio">
       <i class="fa-solid fa-house" aria-hidden></i>
@@ -107,7 +107,6 @@
     </a>
   </nav>
 
-  <!-- opcional: sincroniza estado visual con browse.js si lo estás usando -->
   <script src="../js/browse.js" defer></script>
 </body>
 </html>
