--- a/Ludex/src/public/html/notifications.html
+++ b/Ludex/src/public/html/notifications.html
@@ -39,7 +39,7 @@
 </header>
 
 
-  <!-- Main content (centrado, sin sidebar) -->
+  <!-- Main content -->
   <main class="container" id="mainContent">
     <section class="notif-section">
       <h2 class="section-title">Hoy</h2>
@@ -101,7 +101,7 @@
     </section>
   </main>
 
-  <!-- bottom nav (igual estilo que en browse) -->
+  <!-- bottom nav  -->
   <nav class="bottom-nav" aria-label="Navegación principal">
     <a href="./browse.html" class="nav-item" data-section="home"><i class="fa-solid fa-house"></i><span>Inicio</span></a>
     <a href="./notifications.html" class="nav-item active" data-section="notifications"><i class="fa-solid fa-bell"></i><span>Alertas</span></a>
@@ -113,7 +113,6 @@
 
   </nav>
 
-  <!-- si necesitas comportamiento JS para sincronizar estados, puedes reciclar browse.js -->
   <script src="../js/browse.js" defer></script>
 </body>
 </html>
