--- a/Ludex/src/public/html/wishlist.html
+++ b/Ludex/src/public/html/wishlist.html
@@ -38,7 +38,7 @@
   </header>
 
 
-  <!-- Main content (centrado, sin sidebar) -->
+  <!-- Main content -->
   <main class="container" id="mainContent">
     <section class="wishlist-meta">
       <div class="wishlist-head">
