--- a/Ludex/src/public/html/Profile.html
+++ b/Ludex/src/public/html/Profile.html
@@ -43,7 +43,7 @@
       <ul>
         <li><a href="./mis-compras.html" class="profile-item">Mis Compras <span class="arrow">›</span></a></li>
         <li><a href="#" class="profile-item">Información de Pago <span class="arrow">›</span></a></li>
-        <li><a href="#" class="profile-item">Configuraciones <span class="arrow">›</span></a></li>
+        <li><a href="./configuration.html" class="profile-item">Configuraciones <span class="arrow">›</span></a></li>
         <li><a href="./developer.html" class="profile-item">Actualizar a desarrollador <span class="arrow">›</span></a></li>
       </ul>
     </nav>
