--- a/Ludex/src/public/html/pago-confirmacion.html
+++ b/Ludex/src/public/html/pago-confirmacion.html
@@ -58,7 +58,7 @@
     </section>
   </main>
 
-  <!-- Menú inferior (solo móvil) -->
+  <!-- Menú inferior -->
   <nav class="bottom-nav">
     <a href="./browse.html" class="nav-item"><i class="fa-solid fa-house"></i><span>Inicio</span></a>
     <a href="#" class="nav-item"><i class="fa-solid fa-bell"></i><span>Alertas</span></a>
