--- a/Ludex/src/public/html/pago.html
+++ b/Ludex/src/public/html/pago.html
@@ -87,7 +87,7 @@
     </form>
   </main>
 
-  <!-- Menú inferior (SOLO móvil) -->
+  <!-- Menú inferior -->
   <nav class="bottom-nav" aria-label="Navegación principal">
     <a href="./browse.html" class="nav-item"><i class="fa-solid fa-house"></i><span>Inicio</span></a>
     <a href="#" class="nav-item"><i class="fa-solid fa-bell"></i><span>Alertas</span></a>
