ajustes de developer

--- a/Ludex/src/public/html/add-game-archivo.html
+++ b/Ludex/src/public/html/add-game-archivo.html
@@ -13,6 +13,12 @@
   <header class="header">
     <h1>Subir juego.</h1>
     <button class="close-btn">&times;</button>
+
+      <script>
+     document.querySelector(".close-btn").addEventListener("click", () => {
+        window.location.href = "developer.html";
+    });
+    </script>
   </header>
 
   <!-- Progreso de pasos -->
@@ -42,11 +48,15 @@
     </section>
   </main>
 
-  <!-- Menú inferior (visible en mobile) -->
-  <footer class="bottom-nav">
-    <a href="./index.html"><i class="fas fa-home"></i></a>
-    <a href="./developer.html"><i class="fas fa-arrow-right"></i></a>
-  </footer>
+<!-- NAV INFERIOR  -->
+  <nav class="bottom-nav dev" aria-label="Navegación">
+    <a class="nav-btn" aria-label="Inicio" href="./developer.html">
+      <i class="fa-solid fa-house"></i>
+     </a>
+      <a class="nav-btn active" aria-label="Panel de desarrollador" href="./Profile.html">
+    <i class="fa-solid fa-user-gear"></i>
+   </a>
+</nav>
 
 </body>
 </html>
