--- a/Ludex/src/public/html/browse.html
+++ b/Ludex/src/public/html/browse.html
@@ -8,7 +8,7 @@
   <!-- Fuente -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Font Awesome (para iconos coherentes) -->
+  <!-- Font -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Tu CSS principal -->
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <!-- Filters pills (horizontal scroll on mobile) -->
+    <!-- Filters pills -->
     <section class="filters" id="filtersSection">
       <div class="filter-group" id="categories" aria-label="Categorias" role="tablist">
         <button class="pill active category-pill" data-category="All Games">All Games</button>
@@ -105,7 +105,7 @@
     </section>
   </main>
 
-  <!-- Menú inferior (SOLO móvil / small screens) -->
+  <!-- Menú inferior -->
   <nav class="bottom-nav" aria-label="Navegación principal">
     <a href="./browse.html" class="nav-item active" data-section="home"><i class="fa-solid fa-house"></i><span>Inicio</span></a>
     <a href="./notifications.html" class="nav-item" data-section="notifications"><i class="fa-solid fa-bell"></i><span>Alertas</span></a>
