--- a/Ludex/src/public/html/add-game-terminar.html
+++ b/Ludex/src/public/html/add-game-terminar.html
@@ -13,6 +13,12 @@
   <header class="header">
     <h1>Subir juego.</h1>
     <button class="close-btn">&times;</button>
+
+      <script>
+     document.querySelector(".close-btn").addEventListener("click", () => {
+        window.location.href = "developer.html";
+    });
+    </script>
   </header>
 
   <!-- Progreso de pasos -->
@@ -24,7 +30,7 @@
 
   <!-- Contenido principal -->
   <main class="form-container">
-    <!-- Logo estilo brand -->
+    <!-- Logo -->
     <div class="brand">
       <svg class="brand-mark" width="24" height="24" viewBox="0 0 24 24" aria-hidden>
         <circle cx="12" cy="12" r="10" fill="#4f7bff"/>
@@ -36,11 +42,15 @@
     <button class="btn-primary" onclick="window.location.href='developer.html';">Subir Juego</button>
   </main>
 
-  <!-- Menú inferior (visible en mobile) -->
-  <footer class="bottom-nav">
-    <a href="./developer.html"><i class="fas fa-home"></i></a>
-    <a href="./developer.html"><i class="fas fa-arrow-right"></i></a>
-  </footer>
+ <!-- NAV INFERIOR  -->
+  <nav class="bottom-nav dev" aria-label="Navegación">
+    <a class="nav-btn" aria-label="Inicio" href="./developer.html">
+      <i class="fa-solid fa-house"></i>
+     </a>
+      <a class="nav-btn active" aria-label="Panel de desarrollador" href="./Profile.html">
+    <i class="fa-solid fa-user-gear"></i>
+   </a>
+</nav>
 
 </body>
 </html>
